# plib

./: CMakeLists.txt  todo.md
include/plib/: macros.hpp  types.hpp
tests/: CMakeLists.txt  main.cpp
